--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "uart_control.c" "drive.c" "tcs34725.c" "main.c" "vlx53l0x.c" "mpu6050.c" "drive.c" "uart_control.c"
+idf_component_register(SRCS "nvs.c" "uart_control.c" "drive.c" "tcs34725.c" "main.c" "vlx53l0x.c" "mpu6050.c" "drive.c" "uart_control.c" "nvs.c"
                     INCLUDE_DIRS ".")
